# mantis-hack

./: .gitignore  Cargo.toml  README.md  deny.toml  install.sh
.claude/commands/: mantishack.md
.github/workflows/: bench.yml  ci.yml  firecracker-live.yml  live-llm.yml  npm-publish.yml
crates/mantis-benches/: Cargo.toml
crates/mantis-benches/benches/: perf_targets.rs
crates/mantis-benches/src/: lib.rs
crates/mantis-claim/: Cargo.toml
crates/mantis-claim/src/: error.rs  lib.rs  verifier.rs
crates/mantis-claim/src/verifiers/: cors_wildcard.rs  idor.rs  missing_security_headers.rs  mod.rs  open_redirect.rs  sqli_error.rs  xss_reflected.rs
crates/mantis-claim/tests/: integration.rs
crates/mantis-cli/: Cargo.toml
crates/mantis-cli/src/: banner.rs  llm_pick.rs  main.rs  project_config.rs  run_log.rs  setup.rs
crates/mantis-core/: Cargo.toml
crates/mantis-core/src/: lib.rs
crates/mantis-crawler-dynamic/: Cargo.toml
crates/mantis-crawler-dynamic/src/: lib.rs
crates/mantis-daemon/: Cargo.toml
crates/mantis-daemon/src/: lib.rs  pipeline.rs  service.rs
crates/mantis-egress/: Cargo.toml
crates/mantis-egress/src/: error.rs  lib.rs  proxy.rs  request.rs
crates/mantis-egress/tests/: integration.rs
crates/mantis-event-store/: Cargo.toml
crates/mantis-event-store/src/: error.rs  event.rs  head.rs  lib.rs  merkle.rs  store.rs
crates/mantis-event-store/tests/: integration.rs
crates/mantis-fuzzer/: Cargo.toml
crates/mantis-fuzzer/src/: lib.rs
crates/mantis-gateway/: Cargo.toml
crates/mantis-gateway/src/: identity.rs  inbound.rs  lib.rs  platform.rs  platforms.rs  registry.rs  telegram.rs
crates/mantis-hibernation/: Cargo.toml
crates/mantis-hibernation/src/: lib.rs
crates/mantis-hypothesis/: Cargo.toml
crates/mantis-hypothesis/src/: error.rs  lib.rs  rules.rs
crates/mantis-k8s/: Cargo.toml
crates/mantis-k8s/src/: engagement.rs  export.rs  lib.rs  schedule.rs
crates/mantis-mcp/src/: lib.rs  server.rs  utility_tools.rs
crates/mantis-memory/: Cargo.toml
crates/mantis-memory/src/: lib.rs
crates/mantis-operator-model/: Cargo.toml
crates/mantis-operator-model/src/: lib.rs
crates/mantis-planner/: Cargo.toml
crates/mantis-planner/src/: lib.rs  tree.rs  ucb1.rs
crates/mantis-planner/tests/: integration.rs
crates/mantis-playbook/: Cargo.toml
crates/mantis-playbook/src/: distiller.rs  lib.rs  tournament.rs
crates/mantis-plugin/: Cargo.toml
crates/mantis-plugin/src/: capability.rs  error.rs  lib.rs  manifest.rs  registry.rs
crates/mantis-posterior/: Cargo.toml
crates/mantis-posterior/src/: lib.rs
crates/mantis-primitive/: Cargo.toml
crates/mantis-primitive/src/: error.rs  lib.rs  reproducer.rs
crates/mantis-primitive/src/primitives/: cors_wildcard.rs  idor.rs  missing_security_headers.rs  mod.rs  open_redirect.rs  sqli_error.rs  xss_reflected.rs
crates/mantis-primitive/tests/: integration.rs
crates/mantis-proto/: Cargo.toml  build.rs
crates/mantis-proto/src/: lib.rs
crates/mantis-registry/: Cargo.toml
crates/mantis-registry/src/: entry.rs  lib.rs  oci_client.rs  publisher.rs  search.rs
crates/mantis-report/: Cargo.toml
crates/mantis-report/src/: bugcrowd.rs  hackerone.rs  lib.rs  openvex.rs  pdf.rs  sarif.rs  severity.rs
crates/mantis-report/tests/: integration.rs
crates/mantis-runtime/: Cargo.toml
crates/mantis-runtime/src/: lib.rs
crates/mantis-sandbox/: Cargo.toml
crates/mantis-sandbox/src/: firecracker_backend.rs  lib.rs  wasmtime_backend.rs
crates/mantis-sandbox/tests/: firecracker_live.rs
crates/mantis-scanner-http/: Cargo.toml
crates/mantis-scanner-http/src/: error.rs  lib.rs  probe.rs
crates/mantis-scanner-http/tests/: integration.rs
crates/mantis-scheduler/: Cargo.toml
crates/mantis-scheduler/src/: cron.rs  error.rs  lib.rs  store.rs
crates/mantis-scope/: Cargo.toml
crates/mantis-scope/src/: budget.rs  error.rs  evaluator.rs  host_pattern.rs  lib.rs  manifest.rs  port_range.rs  signed.rs
crates/mantis-synthesizer/: Cargo.toml
crates/mantis-synthesizer/src/: anthropic.rs  claude_cli.rs  lib.rs  openai.rs  retry.rs
crates/mantis-tenant/: Cargo.toml
crates/mantis-tenant/src/: lib.rs
crates/mantis-trajectory/: Cargo.toml
crates/mantis-trajectory/src/: lib.rs
crates/mantis-tui/: Cargo.toml
crates/mantis-tui-ratatui/: Cargo.toml
crates/mantis-tui-ratatui/src/: lib.rs  prompt.rs
crates/mantis-tui/src/: lib.rs
crates/mantis-tuner/: Cargo.toml
crates/mantis-tuner/src/: lib.rs
crates/mantis-verify/: Cargo.toml
crates/mantis-verify/src/: main.rs
crates/mantis-video/: Cargo.toml
crates/mantis-video/src/: lib.rs
crates/mantis-web-ui/: Cargo.toml
crates/mantis-web-ui/src/: lib.rs  server.rs  state.rs
crates/mantis-web-ui/static/: index.html
crates/mantis-workspace/: Cargo.toml
crates/mantis-workspace/src/: config.rs  doctor.rs  error.rs  key.rs  keystore.rs  lib.rs  operator.rs  workspace.rs
crates/mantis-workspace/tests/: integration.rs
docs/internal/: README.md  adr-0001-workspace-structure.md  adr-0002-event-sourcing-semantics.md  adr-0003-scope-dsl-grammar.md  adr-0004-egress-proxy-threat-model.md  adr-0005-grpc-api-versioning.md  adr-0006-workspace-key-management.md  adr-0007-merkle-evidence-chain.md  adr-0008-scanner-hypothesis-pipeline.md  adr-0009-engagement-runtime.md  adr-0010-phase-0-closeout.md  adr-0011-primitive-trait.md  adr-0012-claim-verification.md  adr-0013-report-format.md  adr-0014-primitive-catalog-growth.md  adr-0015-mcts-planner.md  adr-0016-bayesian-posterior.md  phase0-plan.md
docs/site/: README.md  index.html
docs/site/cli/: hack.md  investigate.md  prompt.md  status.md
npm/mantis-cli/: package.json
npm/mantishack/: package.json
plugin/: README.md
plugin/claude-code/.claude-plugin/: plugin.json
plugin/claude-code/commands/: mantishack.md
plugin/claude-code/skills/: claim.md  report.md  scan.md  (+1 more)
plugin/codex/: plugin.toml
plugin/opencode/: opencode.json
proto/: engagement.proto
viewer/: package-lock.json  package.json  tailwind.config.js  vite.config.ts
viewer/src/: App.tsx  index.css
(+8 files in other folders)
