[package]
name = "mantis-claim"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Claim type and independent verifier. A primitive's Confirmed verdict becomes a Verified claim only after the verifier re-runs the reproducer in isolation."

[dependencies]
mantis-core = { workspace = true }
mantis-primitive = { workspace = true }
mantis-scanner-http = { workspace = true }

async-trait = { workspace = true }
hex = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }

[lints]
workspace = true
