[package]
name = "mantis-hibernation"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Engagement hibernation: snapshot daemon state to disk and restore on demand (PRD §5.1.6, §12)."

[dependencies]
mantis-core = { workspace = true }
camino = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
ulid = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
