[package]
name = "mantis-planner"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Monte Carlo Tree Search planner over (surface, primitive) actions, using UCB1 selection."

[dependencies]
mantis-core = { workspace = true }
mantis-hypothesis = { workspace = true }
mantis-scanner-http = { workspace = true }

serde = { workspace = true }
tracing = { workspace = true }

[lints]
workspace = true
