[package]
name = "mantis-scheduler"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Continuous monitoring scheduler. Owns cron-style schedules that fire engagement scans on a recurring cadence."

[dependencies]
mantis-core = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
ulid = { workspace = true }

[lints]
workspace = true
