[package]
name = "mantis-scope"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Scope DSL: parse, sign, verify, and evaluate engagement scope manifests."

[dependencies]
mantis-core = { workspace = true }
ed25519-dalek = { workspace = true }
glob-match = { workspace = true }
hex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml_ng = { workspace = true }
thiserror = { workspace = true }
ulid = { workspace = true }

[dev-dependencies]
rand = { workspace = true }

[lints]
workspace = true
