[package]
name = "mantis-tenant"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Multi-tenant namespace layer. Each tenant owns an isolated workspace path, key namespace, and engagement event log."

[dependencies]
mantis-core = { workspace = true }
camino = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
ulid = { workspace = true }

[lints]
workspace = true
