[package]
name = "mantis-tui-ratatui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Ratatui-based terminal renderer for mantis-tui's ScreenModel (PRD §9.2)."

[dependencies]
mantis-tui = { workspace = true }
ratatui = { workspace = true }

# Prompt-REPL deps: rustyline for the inline Claude-Code-style
# input loop. crossterm/tokio are kept because the older alt-screen
# code (still in this crate's git history) might be re-enabled, and
# because the engagement-dashboard renderer uses ratatui.
crossterm = "0.28"
tokio = { workspace = true }
anyhow = { workspace = true }
rustyline = "14"

[lints]
workspace = true
