[package]
name = "mantis-tuner"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Evolutionary tuner. Multi-objective NSGA-II selection over Mantis configuration genomes (PRD §5.13.4)."

[dependencies]
serde = { workspace = true }

[lints]
workspace = true
