[package]
name = "mantis-verify"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Standalone verifier for Mantis inclusion proofs."

[[bin]]
name = "mantis-verify"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
blake3 = { workspace = true }
clap = { workspace = true }
ed25519-dalek = { workspace = true }
hex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[lints]
workspace = true
